first.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example-pod
  labels:
    purpose: demonstrate-args
spec:
  restartPolicy: Always
  containers:
  - name: example-container
    image: ubuntu
    command: ["/bin/echo", "Hello"]
    args: ["Welcome", "to", "Kubesimplify"]
