os.yaml
apiVersion: v1
kind: Pod
metadata:
  name: example
spec:
  os:
    name: windows  # or "linux"
  containers:
    - name: myapp
      image: myapp:latest
