nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nodeport-service
spec:
  selector:
    app: my-app
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30001
  type: NodePort
